# Social_Blogging_App

./: .gitignore  README.md
Desktop/Blog_project/: Dockerfile  pyproject.toml
Desktop/Blog_project/blogs/: .gitignore  README.md
Desktop/Blog_project/blogs/src/blogs/: crew.py  main.py
Desktop/Blog_project/blogs/src/blogs/faiss_index/: index.faiss
Desktop/Blog_project/blogs/src/blogs/knowledge/: context.txt
Desktop/Blog_project/blogs/src/blogs/tools/: serpapi_tool.py
Desktop/Blog_project/blogs/tests/: quick_test.py
Desktop/Blog_project/chatbot/: Dockerfile  docker-compose.yaml
Desktop/Blog_project/chatbot/blogs/: pyproject.toml
Desktop/Blog_project/chatbot/blogs/src/blogs/: crew.py  main.py  test.ipynb  vector.py
Desktop/Blog_project/chatbot/blogs/src/blogs/config/: agents.yaml  tasks.yaml
Desktop/Blog_project/chatbot/blogs/src/blogs/faiss_index/: index.faiss  index.pkl
Desktop/Blog_project/chatbot/blogs/src/blogs/knowledge/: content.txt  context.txt
Desktop/Blog_project/chatbot/blogs/src/blogs/tools/: custom_tool.py
Desktop/Blog_project/chatbot/blogs/tests/: test.ipynb
backend/: package-lock.json  package.json  server.js
backend/config/: corsOptions.js  db.js
backend/controllers/: authController.js
backend/middleware/: verifyToken.js
backend/model/: Comment.js  Post.js
backend/models/: User.js
backend/routes/: authRoutes.js  posts.js
chatbot/: .dockerignore  .gitignore  requirements.txt
chatbot/blogs/tests/: test_crew.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
(+24 files in other folders)
